<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Metrans</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_principal">Principal</string>
    <string name="menu_principal_salir">Salir</string>
    <string name="title_activity_about_me">AboutMe</string>
    <string name="menu_principal_about">Acerca de</string>
    <string name="title_activity_calc">Calc</string>
    <string name="title_activity_secundaria">Secundaria</string>
    <string name="credits_david">David Ochoa</string>
    <string name="devBy">Desarrollado por:</string>
    <string name="credits_consta">Constantino Mora</string>
    <string name="credits_alexis">Alexis Rivera</string>
    <string name="cerrar">Cerrar</string>

</resources>
