<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/metrans_logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="22dp"
        android:text="@string/devBy" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/textView1"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/fb_david"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook" />

    </LinearLayout>

    <ImageView
        android:id="@+id/tw_david"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/linearLayout1"
        android:src="@drawable/twitter" />

    <ImageView
        android:id="@+id/fb_alexis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:src="@drawable/facebook" />

    <ImageView
        android:id="@+id/tw_alexis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tw_david"
        android:layout_alignTop="@+id/fb_alexis"
        android:src="@drawable/twitter" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/fb_alexis"
        android:layout_marginTop="30dp"
        android:text="@string/credits_consta" />

    <ImageView
        android:id="@+id/fb_consta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_toLeftOf="@+id/tw_alexis"
        android:src="@drawable/facebook" />

    <ImageView
        android:id="@+id/tw_consta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tw_alexis"
        android:layout_alignTop="@+id/fb_consta"
        android:layout_marginLeft="18dp"
        android:src="@drawable/twitter" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="40dp"
        android:text="@string/credits_alexis" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/credits_david" />

    <Button
        android:id="@+id/cerrar_about"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fb_consta"
        android:layout_marginTop="35dp"
        android:layout_toLeftOf="@+id/fb_consta"
        android:onClick="Cerrar"
        android:text="@string/cerrar" />

</RelativeLayout>